--- a/src/components/MealPage.css
+++ b/src/components/MealPage.css
@@ -10,7 +10,7 @@ button[name="home-button1"] {
     border:none;
     height: 120px;
     width: 120px;
-    background-image: url("http://localhost:9000/development-internet-applications/mos_logo.png");
+    background-image:  url("../assets/mos_logo.png");
     object-fit: cover;
     background-size: cover;
     background-position: center center;
