--- a/src/components/WelcomePage.css
+++ b/src/components/WelcomePage.css
@@ -6,6 +6,7 @@ body{
     cursor: auto;
     font-family: 'Golos Text', sans-serif;
     background-size: cover;
+    
 }
 
 .space{
@@ -19,27 +20,35 @@ body{
     padding: 0;
 }
 
-header{
+.header-welcome{
     width: 100%;
     background: white;
-    height: 150px;
+    height: 160px;
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
+    justify-content:space-between;
     align-items: center;
-    gap: 15%
 }
 
-h1{
+
+.h1-welcome{
     color: #cc2222;
     font-size: 32px;
     font-weight: 600;
+    margin-right:60px;
+
 }
+
+.no-underline {
+    text-decoration: none;
+}
+
+
 
 .home-button{
     padding: 10px 15px;
     margin:10px;
     margin-left:20px;
-    margin-top: 20px;
     border:none;
     height: 120px;
     width: 120px;
@@ -58,7 +67,7 @@ h1{
 
 button{
     margin: 10px;
-    padding:10px
+    padding: 10px
 }
 
 .container{
